@@ -1,7 +1,6 @@
 Bugs
 ----
-- searching booleans doesn't work
-# - none known :-)
+- none known :-)
 
 Documentation
 -------------
